# Final-Project-Hactiv8

./: .env.example  .gitignore  Copy of Test Results.xls  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_ai_busy_fallback.py  test_ai_compare.py  test_classifier_model_compare.py  test_edge_cases_emotional_intelligence.py  test_mic_audio_check.py  test_mic_realtime.py  test_pipeline_loadtest.py  test_rag_fallback_priority.py  test_rag_pipeline_integration.py  test_rag_rerank.py  test_realtime_stt_classifier.py  test_roleplay_classifier.py  test_stt_compare.py
backend/: Dockerfile  config.py
backend/db/: car_db.py  customer_db.py  customer_history.json  sales_history.jsonl
backend/models/: schemas.py
backend/routers/: cars.py  ws.py
backend/scripts/: seed_conversation_patterns.py
backend/services/: ai.py  elicitation.py  langfuse_client.py  metrics.py  rag.py  session.py  speaker_classifier.py  stt.py  topic_patterns.py  tts.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AiHintPanel.jsx  CarDashboard.jsx  ConversationPanel.jsx
frontend/src/hooks/: useAudioRecorder.js  useTts.js  useWebSocket.js
monitoring-stack/langfuse/: docker-compose.yml
monitoring-stack/prometheus/: docker-compose.yml
monitoring-stack/prometheus/config/: alerts.yml  prometheus.yml
monitoring-stack/prometheus/grafana/dashboards/: showroom_ai.json
scripts/: seed_pinecone.py
(+1 files in other folders)
