[project]
name = "dealer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.28.0",
    "elevenlabs>=2.50.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "langdetect==1.0.9",
    "langfuse>=2,<3",
    "numpy>=2.4.6",
    "openai>=1.50.0",
    "pinecone>=3.0.0",
    "prometheus-client==0.20.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sounddevice>=0.5.5",
    "uvicorn[standard]==0.29.0",
    "websockets>=13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
